<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.xten.sara.ui.home.ImageUploadViewModel" />
        <variable
            name="fragment"
            type="com.xten.sara.ui.home.ImageUploadFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.ImageUploadActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/top_bar_height"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_weight="1"
                        android:text="@string/text_title_upload"
                        android:textSize="@dimen/text_top_title_size"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/btn_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:srcCompat="@drawable/ic_close_" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:backgroundTint="@color/sara_lightGray"
                    app:cardCornerRadius="@dimen/corner_radius_2"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp">

                    <ImageView
                        android:id="@+id/image"
                        Image="@{viewModel.imageUri}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:scaleType="center"
                        tools:srcCompat="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:text="@string/text_upload_desc"
                    android:textColor="@color/sara_red"
                    android:textSize="@dimen/text_content_small_size" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/gap_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/gap_margin"
                        android:background="@drawable/bg_round_small_card"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:includeFontPadding="true"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:padding="@dimen/gap_margin"
                        android:text="@string/title_chip1"
                        android:textStyle="bold"
                        android:onClick="@{()->fragment.activeRadioButton(0)}"
                        ChipColorState="@{fragment.chipState}" />

                    <RadioButton
                        android:id="@+id/radio_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/gap_margin"
                        android:background="@drawable/bg_round_small_card"
                        android:button="@null"
                        android:gravity="center"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:padding="@dimen/gap_margin"
                        android:text="@string/title_chip2"
                        android:textStyle="bold"
                        android:onClick="@{()->fragment.activeRadioButton(1)}"
                        ChipColorState="@{fragment.chipState}" />

                    <RadioButton
                        android:id="@+id/radio_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_round_small_card"
                        android:button="@null"
                        android:gravity="center"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:padding="@dimen/gap_margin"
                        android:text="@string/title_chip3"
                        android:textStyle="bold"
                        android:onClick="@{()->fragment.activeRadioButton(2)}"
                        ChipColorState="@{fragment.chipState}" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/gap_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    app:boxBackgroundColor="@{fragment.chipState? @color/sara_unable : @color/sara_lightGray}"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius"
                    app:boxStrokeColor="@color/text_field_stroke_color"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconTint="@color/sara_red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_request"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_upload_hint"
                        android:imeOptions="actionGo"
                        android:inputType="textMultiLine"
                        android:maxLength="30"
                        android:text="@={viewModel.freeText}"
                        android:textColor="@{fragment.chipState? @color/sara_gray : @color/black}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_request"
                    style="@style/SaraButtonStylePrimary"
                    QueryText="@{viewModel.queryType}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_button_height"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/gap_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin" />


            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>