<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.xten.sara.ui.home.ImageUploadViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.ImageResultFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/status_bar_height"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/top_bar_height"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/default_margin"
                        android:src="@drawable/ic_arrow" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/gap_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_weight="1"
                        android:text="@string/text_title_result"
                        android:textSize="@dimen/text_top_title_size"
                        android:fontFamily="@font/pretendard_bold" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:backgroundTint="@color/sara_lightGray"
                    app:cardCornerRadius="@dimen/corner_radius_4"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp">

                    <ImageView
                        android:id="@+id/image"
                        Image="@{viewModel.imageUri}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:scaleType="center"
                        tools:srcCompat="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/gap_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    app:cardBackgroundColor="@color/sara_lightGray"
                    app:cardCornerRadius="@dimen/corner_radius_4"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp">

                    <LinearLayout
                        android:id="@+id/content_view"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/default_margin"
                            android:layout_marginTop="@dimen/content_margin"
                            android:layout_marginEnd="@dimen/default_margin"
                            android:layout_marginBottom="@dimen/content_margin"
                            android:text="@{viewModel.resultAnalysis.text}"
                            android:textColor="@color/sara_gray" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/gap_margin"
                    android:animateLayoutChanges="true">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_field"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        app:boxBackgroundColor="@color/sara_lightGray"
                        app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                        app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                        app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                        app:boxCornerRadiusTopStart="@dimen/corner_radius"
                        app:boxStrokeColor="@color/text_field_stroke_color"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:errorIconTint="@color/sara_red">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_request"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_save_hint"
                            android:imeOptions="actionGo"
                            android:inputType="textMultiLine"
                            android:maxLength="30"
                            android:text="@={viewModel.freeText}"
                            android:textColor="@color/sara_gray" />
                    </com.google.android.material.textfield.TextInputLayout>
                </FrameLayout>

                <Button
                    android:id="@+id/btn_save"
                    style="@style/SaraButtonStylePrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:height="@dimen/basic_button_height"
                    android:text="컬렉션에 저장하기"
                    app:icon="@drawable/ic_save"
                    app:iconGravity="textStart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/gap_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_recall"
                        style="@style/SaraButtonStyleSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/basic_button_height"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_weight="1"
                        android:text="@string/text_button_recall"
                        app:icon="@drawable/ic_recall"
                        app:iconGravity="textStart"
                        app:iconTint="@color/black" />

                    <Button
                        android:id="@+id/btn_share"
                        style="@style/SaraButtonStyleSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/basic_button_height"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_weight="1"
                        android:text="@string/text_button_share"
                        app:icon="@drawable/ic_share"
                        app:iconGravity="textStart"
                        app:iconTint="@color/black" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/progress_view"
            layout="@layout/view_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            bind:viewModel="@{viewModel}" />

    </FrameLayout>
</layout>